<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".activities.SettingActivity">

    <RelativeLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textMyNotess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/setting"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20ssp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:id="@+id/textAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/account"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13ssp"/>

        <TextView
            android:id="@+id/textAddAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:layout_alignParentEnd="true"
            android:text="@string/add"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_13ssp" />

        <ImageView
            android:id="@+id/imageSignIn"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_done_button"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_done"
            android:tint="@color/colorAccent"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:layout_alignParentEnd="true"
            tools:targetApi="m"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/textNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:includeFontPadding="false"
            android:text="If you do not log in, all notes may be lost"
            android:layout_below="@id/textAccount"
            android:textColor="@color/colorTextSubtitle"
            android:textSize="@dimen/_8ssp"/>

        <TextView
            android:id="@+id/textFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:includeFontPadding="false"
            android:layout_below="@id/textNote"
            android:textColor="@color/colorTextSubtitle"
            android:textSize="@dimen/_12ssp"/>

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:includeFontPadding="false"
            android:layout_below="@id/textFullName"
            android:textColor="@color/colorTextSubtitle"
            android:textSize="@dimen/_12ssp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/auto_save_to_cloud"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13ssp"/>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:clickable="false"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_17sdp" />

    </RelativeLayout>




</LinearLayout>